# kamstrup-mqtt

esp8266-kamstrup-mqtt/Kamstrup_mqtt_simple/: Kamstrup_mqtt_simple.ino
mqtt-2-influx/: Cargo.toml
mqtt-2-influx/src/: main.rs
